<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tfPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/editborder"
        android:ems="10"
        android:fontFamily="@font/futur_heavy"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfUsername" />

    <EditText
        android:id="@+id/tfUsername"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="232dp"
        android:autofillHints=""
        android:background="@drawable/editborder"
        android:ems="10"
        android:fontFamily="@font/futur_heavy"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/yellowbutton"
        android:fontFamily="@font/futur_heavy"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPassword"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbutton"
        android:fontFamily="@font/futur_heavy"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPassword"
        app:layout_constraintVertical_bias="0.005" />
</androidx.constraintlayout.widget.ConstraintLayout>