<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="281dp"
        android:layout_height="61dp"

        android:layout_marginTop="84dp"
        android:fontFamily="@font/futur_heavy"
        android:text="@string/enter_details_for_registration"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/mLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"

            android:autofillHints=""
            android:background="@drawable/textfieldborder"
            android:ems="10"
            android:fontFamily="@font/futur_heavy"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:autofillHints=""

            android:background="@drawable/textfieldborder"
            android:ems="10"
            android:fontFamily="@font/futur_heavy"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/etBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/textfieldborder"

                android:ems="10"
                android:fontFamily="@font/futur_heavy"
                android:hint="@string/enter_your_total_budget"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/greenbutton"
                android:fontFamily="@font/futur_heavy"
                android:text="@string/sign_up_btn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.863"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etBudget"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnSignCancel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/yellowbutton"
                android:fontFamily="@font/futur_heavy"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etBudget"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/textfieldborder"

            android:ems="10"
            android:fontFamily="@font/futur_heavy"
            android:hint="@string/choose_a_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>